system ready for local